--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,5 @@
 blank_issues_enabled: false
+contact_links:
+  - name: GitHub issues
+    url: https://github.com/peteGSX-Projects/.github/issues/new/choose
+    about: Please raise a GitHub issue for bugs or feature requests
