Add assignee and label

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,9 +1,9 @@
 name: Feature Request
 description: Request a new feature
-# assignees: 
-#   - peteGSX
-# labels:
-#   - enhancement
+assignees: 
+  - peteGSX
+labels:
+  - enhancement
 title: "[Feature Request]: "
 body:
   - type: markdown
